Fixed navbar issues on mobile

--- a/ACMAS/web/static/styles/search-by-course-style.css
+++ b/ACMAS/web/static/styles/search-by-course-style.css
@@ -1,5 +1,5 @@
 .search-container {
-  margin-top: 14%;
+  margin-top: 3%;
   max-width: 991px;
 }
 
